--- a/ClementineDSD.desktop
+++ b/ClementineDSD.desktop
@@ -8,7 +8,7 @@ Categories=AudioVideo;Audio;Player;Qt;
 Exec=clementinedsd %U
 Icon=clementinedsd
 Terminal=false
-MimeType=audio/x-mpegurl;audio/mpeg;audio/x-mp3;audio/ogg;audio/flac;audio/x-vorbis+ogg;application/ogg;audio/x-aiff;audio/aiff;audio/m4a;audio/x-m4a;audio/x-ms-wma;audio/vnd.rn-realaudio;audio/vorbis;audio/x-flac;audio/mp4;audio/wav;audio/x-wav;audio/x-voc;audio/3gpp;audio/ac3;audio/AMR;audio/AMR-WB;audio/basic;audio/midi;audio/x-prs.ptt;audio/vnd.dlna.adts;audio/t140c;audio/x-aiff;audio/x-midi;audio/x-mod;audio/ogg;audio/vnd.audible;audio/vnd.dra;audio/vnd.everad.plj;audio/vnd.lucent.voice;audio/vnd.ms-playready.media.pya; audio/x-dsf;audio/x-dff;
+MimeType=audio/x-mpegurl;audio/mpeg;audio/x-mp3;audio/ogg;audio/flac;audio/x-vorbis+ogg;application/ogg;audio/x-aiff;audio/aiff;audio/m4a;audio/x-m4a;audio/x-ms-wma;audio/vnd.rn-realaudio;audio/vorbis;audio/x-flac;audio/mp4;audio/wav;audio/x-wav;audio/x-voc;audio/3gpp;audio/ac3;audio/AMR;audio/AMR-WB;audio/basic;audio/midi;audio/x-prs.ptt;audio/vnd.dlna.adts;audio/t140c;audio/x-midi;audio/x-mod;audio/vnd.audible;audio/vnd.dra;audio/vnd.everad.plj;audio/vnd.lucent.voice;audio/vnd.ms-playready.media.pya;audio/x-dsf;audio/x-dff;audio/dsd-dsf;audio/dsd-dff;
 Keywords=music;sound;audio;player;media;dsd;dsf;dff;
 StartupNotify=true
 StartupWMClass=clementinedsd
